changed profile picture

--- a/resume/index.html
+++ b/resume/index.html
@@ -18,7 +18,7 @@
 
     <main>
         <section class="profile">
-            <img src="../assets/images/profile_image.jpeg" alt="A professional picture of me">
+            <img src="../assets/images/profile_picture.jpg" alt="A professional picture of me">
             <h2>Per Lundhammar</h2>
             <p>Email (personal): per.lundhammar@gmail.com</p>
             <p>Email (work): lundhamm@kth.se</p>
